--- a/jsClassDefine.html
+++ b/jsClassDefine.html
@@ -44,8 +44,9 @@
       });
     }
     genHTML(reserve){
+      reserve.today = new Date(reserve.today);
       this.calendars = [];
-      let quota = {dummy: true,count:()=>{}};
+      let quota = {dummy: true};
       this.calendar.forEach(month=>{
         const y = month.month.year;
         const m = month.month.month+ 1;
@@ -70,16 +71,14 @@
         caption.appendChild(title);
         table.appendChild(caption);
         month.dates.forEach(date=>{
-          if(date.date.quota != null){
-            if(quota.dummy != true)quota.display();
-            quota = new Quota();
-            quota.setQuota(date.date.quota);
-            quota.register(caption);
-          }
           let d = date.date.date;
           const dt = d.getDate();
           const day = d.getDay();
           const type = date.type;
+          if(date.date.quota != null){
+            if(quota.dummy != true)quota.display();
+            quota = new Quota(date.date.quota, d);
+          }
           if(c++% 7 == 0){
             tr = document.createElement("tr");
             table.appendChild(tr);
@@ -89,6 +88,7 @@
           td.insertAdjacentHTML('beforeend', `<span class="date">${dt}</span>`);
           switch(type){
             case "reservable":
+              if(quota.dummy != true)quota.addDay(d);quota.register(caption);
               const capacity = date.date.capacity;
               const members = date.date.members;
               const reserved = members.indexOf(reserve.user.email[0]) != -1;
@@ -157,7 +157,7 @@
                   });
               }
               switch(true){
-                case !reserved && (button.innerHTML == "announce" || d.getTime()- (new Date(reserve.today)).getTime() <= reserve.config.cancelable* 3600* 1000 || button.innerHTML == "full"):
+                case !reserved && (button.innerHTML == "announce" || d.getTime()- reserve.today.getTime() <= reserve.config.cancelable* 3600* 1000 || button.innerHTML == "full"):
                   const msg = document.createElement("span");
                   msg.className = "message";
                   if(date.date.comment.length > 7){
@@ -168,12 +168,17 @@
                   }
                   td.appendChild(msg);
                   break;
-                case reserved && d.getTime() < (new Date(reserve.today)).getTime():
+                case reserved && d.getTime() < reserve.today.getTime():
                   break;
                 default:
                   td.appendChild(opeButton);
               }
               break;
+          }
+          let mSec = reserve.today.getTime()- d.getTime();
+          if(mSec <= 24* 60* 60* 1000 && mSec > 0){
+            td.style.color = "#1a73e8";
+            td.style.border = "0.05em solid #1a8ce8";
           }
           tr.appendChild(td);
         });
@@ -193,170 +198,30 @@
   }
   class Quota{
     //DOM登録バージョン(Client)
-    constructor(){
+    constructor(q, start){
       this.counter = 0;
       this.domList = [];
+      this.q = q;
+      this.dates = [start]
     }
     count(){
       this.counter++;
     }
     register(caption){
-      this.domList.push(caption);
+      if(!this.domList.includes(caption))this.domList.push(caption);
     }
-    setQuota(q){
-      this.q = q;
+    addDay(d){
+      this.dates.push(d);
     }
     display(){
+      const start = this.dates[0];
+      const until = this.dates[this.dates.length- 1];
       this.domList.forEach(dom=>{
         const counter = document.createElement("div");
         counter.className = "counter";
-        counter.innerHTML = `${this.counter} / ${this.q}`;
+        counter.innerText = `${start.toLocaleDateString("ja-JP", {weekday:"short", day:"numeric", month:"numeric", year:"numeric"})}～${until.toLocaleDateString("ja-JP", {weekday:"short", day:"numeric", month:"numeric", year:"numeric"})} ${this.counter} / ${this.q}`;
         dom.appendChild(counter);
       });
-    }
-  }
-  class Status{
-    constructor(){
-      this.window = document.getElementById("reservations");
-      this.window.addEventListener("click", (e)=>{this.hide()});
-      this.status = {
-        display: false,
-        top: 0
-      };
-      this.members = {};
-      this.elm;
-    }
-    refresh(){
-      const position = this.elm.getBoundingClientRect();
-      if(this.status.display){
-        this.move(position.top+ window.pageYOffset, position.left+ window.pageXOffset);
-      }else{
-        this.appear(position.top+ window.pageYOffset, position.left+ window.pageXOffset);
-      }
-    }
-    move(top, left){
-      this.window.style.animationName = "moveReservations";
-      let animation = this.window.getAnimations()[0];
-      let keyframe = animation.effect;
-      animation.currentTime = 0;
-      keyframe.setKeyframes([
-        {
-          opacity: 1,
-          zIndex: 1,
-          top: `${this.status.top}px`,
-          left: `${this.status.left}px`
-        },
-        {
-          opacity: 1,
-          zIndex: 1,
-          top: `${top+ 5}px`,
-          left: `${left+ 5}px`
-        }
-      ]);
-      this.status.top = top+ 5;
-      this.status.left = left+ 5;
-      this.play();
-    }
-    appear(top, left){
-      this.window.style.animationName = "appearReservations";
-      let keyframe = this.window.getAnimations()[0].effect;
-      keyframe.setKeyframes([
-        {
-          opacity: "0",
-          zIndex: 1,
-          top: "-100px"
-        },
-        {
-          opacity: 1,
-          zIndex: 1,
-          top: `${top+ 5}px`,
-          left: `${left+ 5}px`
-        }
-      ]);
-      this.status.top = top+ 5;
-      this.status.left = left+ 5;
-      this.play();
-      this.status.display = true;
-    }
-    hide(){
-      this.window.style.animationName = "disappearReservations";
-      let keyframe = this.window.getAnimations()[0].effect;
-      keyframe.setKeyframes([
-        {
-          opacity: 1,
-          zIndex: 1,
-          top: `${this.status.top}px`,
-          left: `${this.status.left}px`
-        },
-        {
-          opacity: 0,
-          zIndex: 0,
-          top: "-100px"
-        }
-      ]);
-      this.play();
-      this.status.display = false;
-      this.elm = null;
-    }
-    play(){
-      this.window.style.animationPlayState = "running";
-    }
-    display(elm, date){
-      this.window.innerHTML = `<span style="position: absolute; top:-0.25em; left: 0em; font-size: 2em;">×</span>${date.members.length} / ${date.capacity}<br>`;
-      this.window.insertAdjacentHTML('beforeend', date.comment);
-      date.members.forEach(mail=>{
-        this.window.appendChild(document.createElement("ul")).appendChild(document.createElement("li")).innerHTML = `${mail}`;
-      });
-      this.elm = elm;
-      let position = this.elm.getBoundingClientRect();
-      this.refresh();
-    }
-  }
-  const NAME = "name";
-  const NAMEHTML = "nameHTML";
-  const CLASS = "class";
-  class Replace{
-    constructor(){
-      this.target = {
-        name: {
-          "replc-account": ""
-        },
-        class: {},
-        nameHTML: {}
-      };
-    }
-    setTarget(type, name, value = "[読み込み中…]"){
-      this.target[type][name] = value;
-      this.do(type, name);
-    }
-    do(targetType, manTarget){
-      if(manTarget == undefined || targetType == undefined){
-        Object.keys(this.target.class).forEach(tag=>{
-          document.getElementsByClassName(tag).forEach(elm=>{
-            elm.innerText = this.target.class.target[tag];
-          });
-        });
-        Object.keys(this.target.name).forEach(tag=>{
-          document.getElementsByName(tag).forEach(elm=>{
-            elm.innerText = this.target.name.target[tag];
-          });
-        });
-      }else{
-        if(this.target[targetType] != undefined && this.target[targetType][manTarget] != undefined){
-          switch(targetType){
-            case NAME:
-              document.getElementsByName(manTarget).forEach(elm=>{
-                elm.innerText = this.target[targetType][manTarget];
-              });
-              break;
-            case CLASS:
-              document.getElementsByClassName(manTarget).forEach(elm=>{
-                elm.innerText = this.target[targetType][manTarget];
-              });
-              break;
-          }
-        }
-      }
     }
   }
 //--></script>
