--- a/css.html
+++ b/css.html
@@ -1,4 +1,5 @@
 <style>
+  /*rgb(234, 187, 173)*//*Gambier Bayの何かの色*/
   html{
     scroll-behavior: smooth;
   }
@@ -84,6 +85,7 @@
   /*予約済み*/
   .reserved{
     background-color: rgba(126, 162, 162, 1);/*Gambier Bay mk.IIのバンダナの色(緑っぽい)*/
+    color: rgb(255, 255, 255);
   }
   canvas.status{
     border: rgb(118, 118, 118) 1px solid;
@@ -104,7 +106,7 @@
     position: absolute;
     max-width: 90%;
     opacity: 0;
-    top: -100px;
+    top: -100%;
     left: 0px;
     animation: appearReservations 350ms both paused;
   }
