サポートの追記(HP)

--- a/UI.html
+++ b/UI.html
@@ -42,6 +42,10 @@
     <?!= HtmlService.createHtmlOutputFromFile('jsClassDefine').getContent(); ?>
     <?!= HtmlService.createHtmlOutputFromFile('jsFunctionDefine').getContent(); ?>
     <?!= HtmlService.createHtmlOutputFromFile('js').getContent(); ?>
-    <footer><h1>サポート</h1><a href="mailto:k019d1070+support@g.neec.ac.jp">k019d1070+support@g.neec.ac.jp</a></footer>
+    <footer>
+      <h1>サポート</h1>
+      <a href="https://sites.google.com/g.neec.ac.jp/k019d1070/portfolio/development">K019D1070 佐藤優樹の部屋 - 開発</a>
+      <a href="mailto:k019d1070+support@g.neec.ac.jp">k019d1070+support@g.neec.ac.jp</a>
+    </footer>
   </body>
 </html>
