CSSのコメントを追記

--- a/css.html
+++ b/css.html
@@ -13,7 +13,7 @@
     width: 3.5em;
   }
   .usageGuide{
-    border: 1px solid rgba(37, 5, 95, 0.8);
+    border: 1px solid rgba(37, 5, 95, 0.8); /*テクノロジーカレッジっぽい色*/
     border-radius: 2px;
     background-color: #ccb0cc;
     padding: 5px;
