--- a/css.html
+++ b/css.html
@@ -1,5 +1,7 @@
 <style>
   /*rgb(234, 187, 173)*//*Gambier Bayの何かの色*/
+  /*rgb(236, 97, 91); /*Conte di cavour正月グラの袴部分(明)*/
+  /*rgb(132, 40, 42); /*Conte di cavour正月グラの袴部分(暗)*/
   html{
     scroll-behavior: smooth;
   }
@@ -30,7 +32,7 @@
     height: fit-content;
     background-color: rgba(250, 243, 241, 1);/*Gambier Bay mk.IIのシャツの色*/
     padding: 4px;
-    border: 4px solid rgba(37, 5, 95, 0.8);
+    border: 4px solid rgba(37, 5, 95, 0.8); /*テクノロジーカレッジっぽい色*/
     border-radius: 10px;
     margin: 10px 10px 10px 10px;
   }
