--- a/UI.html
+++ b/UI.html
@@ -45,6 +45,7 @@
     <footer>
       <h1>サポート</h1>
       <a href="https://sites.google.com/g.neec.ac.jp/k019d1070/portfolio/development">K019D1070 佐藤優樹の部屋 - 開発</a>
+      <a href="https://github.com/K019D1070/NEEC-Reserver">開発リポジトリ</a>
       <a href="mailto:k019d1070+support@g.neec.ac.jp">k019d1070+support@g.neec.ac.jp</a>
     </footer>
   </body>
