フッターのレイアウト修正

--- a/UI.html
+++ b/UI.html
@@ -44,9 +44,9 @@
     <?!= HtmlService.createHtmlOutputFromFile('js').getContent(); ?>
     <footer>
       <h1>サポート</h1>
-      <a href="https://sites.google.com/g.neec.ac.jp/k019d1070/portfolio/development">K019D1070 佐藤優樹の部屋 - 開発</a>
-      <a href="https://github.com/K019D1070/NEEC-Reserver">開発リポジトリ</a>
-      <a href="mailto:k019d1070+support@g.neec.ac.jp">k019d1070+support@g.neec.ac.jp</a>
+      <a href="https://sites.google.com/g.neec.ac.jp/k019d1070/portfolio/development">K019D1070 佐藤優樹の部屋 - 開発</a><br>
+      <a href="https://github.com/K019D1070/NEEC-Reserver">開発リポジトリ</a><br>
+      <a href="mailto:k019d1070+support@g.neec.ac.jp">k019d1070+support@g.neec.ac.jp</a><br>
     </footer>
   </body>
 </html>
