リロードに合わせて詳細ポップアップを隠すように変更(リアルタイムに反映されるのが望ましい？)

--- a/jsFunctionDefine.html
+++ b/jsFunctionDefine.html
@@ -50,6 +50,7 @@
         target.getElementsByTagName("table")[0].remove();
       });
       statusDisplay();
+      if(resStatus.status.display)resStatus.hide();
     }, error=>{
       Error(error);
     });
