出席ノルマ表示についての説明を追加

--- a/UI.html
+++ b/UI.html
@@ -34,6 +34,10 @@
       <span class="fullHouse">アナウンス</span>
       <span style="border: 0.05em solid #1a8ce8; color: #1a73e8;">本日</span>
     </div>
+    <h3>ノルマ表示(&#x1f9ea;試験的な機能&#x1f9ea;)</h3>
+    出席ノルマを"****/**/**(*)～****/**/**(*) * / *"のような形式で各月に表示しています。<br>
+    たとえば"2022/2/3～2022/2/25 2 / 4"のように表示されている場合、2022年2月3日から2022年2月25日の間に4回出席する必要があり、2回予約を入れている状態です。<br>
+    現時点で試験的な機能であり、目安として参考にしてください。
     <h2>注意事項</h2>
     当日0時より<span name="replc-cancelable"></span>時間前はキャンセルできません
     <div class="calendars"></div>
