コメントの誤字を修正

--- a/jsClassDefine.html
+++ b/jsClassDefine.html
@@ -2,7 +2,7 @@
   class Calendar{
     /**
     * スプレッドシートから抜き出された歯抜けの日付を1か月全部あるカレンダー形式に整えます
-    * @param {Object} months - {$yaer$month: [dates]}
+    * @param {Object} months - {$year$month: [dates]}
     */
     constructor(){
       this.calendar = []; //[{month:{year: year, month: month}, dates: [{date: {date: dateObject, num: recordNumber}, type: dateType},...]},...] (dateType=予約対象か)
